fix: temporary fix for invisible color from some logo letters

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  --logo-color: black;
+}
+
 /* Estilos ProductDetails */
 
 .thumbnail-wrapper {
